CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(myframe_pb)

#### compile setting
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED YES)
SET(CMAKE_C_FLAGS "-fPIC -DPIC -DNDEBUG")
SET(CMAKE_CXX_FLAGS "-fPIC -DPIC -DNDEBUG")

#### path setting
SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}/myframe")
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(MYFRAME_ROOT ${CMAKE_INSTALL_PREFIX})
SET(MYFRAME_INSTALL_LIB_DIR ${MYFRAME_ROOT}/lib)
SET(MYFRAME_INSTALL_HEADER_DIR ${MYFRAME_ROOT}/inc)

FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

### PROTO
FILE(GLOB proto_files "proto/*.proto")
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${proto_files})

ADD_LIBRARY(myframe_pb SHARED ${PROTO_SRCS} ${PROTO_HDRS})
TARGET_LINK_LIBRARIES(myframe_pb
    ${Protobuf_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(myframe_pb
    PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

### install
INSTALL(TARGETS
    myframe_pb
    LIBRARY DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${MYFRAME_INSTALL_LIB_DIR}
)
INSTALL(DIRECTORY proto DESTINATION ${MYFRAME_ROOT})
INSTALL(FILES
    ${PROTO_HDRS}
    PERMISSIONS
    OWNER_READ
    GROUP_READ
    WORLD_READ
    DESTINATION ${MYFRAME_INSTALL_HEADER_DIR}
)
